Metaball animation playback crash #62311

Closed
opened 2019-03-07 14:42:13 +01:00 by alon abrany · 16 comments

System Information
system-info.txt

2.80 (sub 46), branch: blender2.7, commit date: 2019-03-06 00:18, hash: 18e5540a48, type: Release
build date: 05/03/2019, 17:06
platform: Windows

Short description of error
File Crash on when playing animation or scrubbing from unknown reason

here is the file
CRASH ON PLAYBACK.blend

**System Information** [system-info.txt](https://archive.blender.org/developer/F6779364/system-info.txt) 2.80 (sub 46), branch: blender2.7, commit date: 2019-03-06 00:18, hash: 18e5540a48b6, type: Release build date: 05/03/2019, 17:06 platform: Windows **Short description of error** File Crash on when playing animation or scrubbing from unknown reason here is the file [CRASH ON PLAYBACK.blend](https://archive.blender.org/developer/F6779429/CRASH_ON_PLAYBACK.blend)
Author

Added subscriber: @alonabrany

Added subscriber: @alonabrany

#72586 was marked as duplicate of this issue

#72586 was marked as duplicate of this issue

#69578 was marked as duplicate of this issue

#69578 was marked as duplicate of this issue

#71163 was marked as duplicate of this issue

#71163 was marked as duplicate of this issue

#70794 was marked as duplicate of this issue

#70794 was marked as duplicate of this issue

Added subscribers: @fclem, @WilliamReynish

Added subscribers: @fclem, @WilliamReynish

Can reproduce.

Seems to crash in mesh_calc_normals_poly_prepare_cb

@fclem Is this in your area?

Can reproduce. Seems to crash in mesh_calc_normals_poly_prepare_cb @fclem Is this in your area?
Sergey Sharybin was assigned by Clément Foucault 2019-03-07 16:19:08 +01:00

Added subscriber: @Sergey
Removed subscriber: @fclem

Added subscriber: @Sergey Removed subscriber: @fclem

It's a threading issue crashing in metaball eval code. Running with -t 1 fixes it.

This is the backtrace P928.

Assigning to @sergey.

It's a threading issue crashing in metaball eval code. Running with `-t 1` fixes it. This is the backtrace [P928](https://archive.blender.org/developer/P928.txt). Assigning to @sergey.

The issue is caused by the legacy design of metaball tessellation, which does create lists of duplicated objects for every object in the scene. This is so metaballs will interact with each other when are emitted from particle system.
This is not a thread-safe process, and the old dependency graph was dealing with it quite stupid: update metaballs (and everything what depends on the,) in a single thread. There is a define MBALL_SINGLETHREAD_HACK in scene.c in 2.7 series.
I imagine that the new dependency graph will crash same way in all the blender versions.

Ideally we would need to change metaballs to have an explicit collection which it interacts with, to make things more clear about what is interacting with what.

That is a quite bug project. For until then the solution is to create the list of interaction by dependency graph and use that instead of iterating over the entire scene.

The issue is caused by the legacy design of metaball tessellation, which does create lists of duplicated objects for every object in the scene. This is so metaballs will interact with each other when are emitted from particle system. This is not a thread-safe process, and the old dependency graph was dealing with it quite stupid: update metaballs (and everything what depends on the,) in a single thread. There is a define `MBALL_SINGLETHREAD_HACK` in `scene.c` in 2.7 series. I imagine that the new dependency graph will crash same way in all the blender versions. Ideally we would need to change metaballs to have an explicit collection which it interacts with, to make things more clear about what is interacting with what. That is a quite bug project. For until then the solution is to create the list of interaction by dependency graph and use that instead of iterating over the entire scene.
Brecht Van Lommel changed title from File Crash on when playing animation or scrubbing to Metaball animation playback crash 2019-03-14 19:07:44 +01:00

Added subscribers: @razorozx, @JacquesLucke

Added subscribers: @razorozx, @JacquesLucke
Added subscribers: @Lime_Flavored_Dragon, @mano-wii, @grosgood

Added subscribers: @DocOuatzat, @dfelinto

Added subscribers: @DocOuatzat, @dfelinto

Added subscriber: @pseudo.boots

Added subscriber: @pseudo.boots

This issue was referenced by cea67064da

This issue was referenced by cea67064da5fccbd400ee0c9437c9355289beab8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62311
No description provided.